Fixed testing issues and successful build

--- a/src/test/java/com/keycodehelp/application-test.properties
+++ b/src/test/java/com/keycodehelp/application-test.properties
@@ -1,21 +1,19 @@
-# MySQL connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/keycodehelpdb
-spring.datasource.username=apple
-spring.datasource.password=MrGuru
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Use H2 in-memory database for testing instead of MySQL
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 
-# JPA/Hibernate settings
-spring.jpa.hibernate.ddl-auto=update
+
+# Show SQL statements
 spring.jpa.show-sql=true
 
-
-# Enable Actuator endpoints for monitoring and management
-management.endpoints.web.exposure.include=*
-
-logging.level.org.springframework.web=DEBUG
+# Logging settings for debugging during tests
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=DEBUG
 
-# application.properties
-spring.mvc.static-path-pattern=/static/**
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+
+jwt.secret=ZJqLwEOQ8N4rY39KTWkdrPOLa9HrwpV2hZSfSXq6EXs=
+
